@startuml

title __PERSONEL's Class Diagram__\n

  namespace jovic.dragan.pj2.personel {
    class jovic.dragan.pj2.personel.Passenger {
        + Passenger()
    }
  }
  

  namespace jovic.dragan.pj2.personel {
    class jovic.dragan.pj2.personel.Person {
        + lastName : String
        - name : String
        + Person()
    }
  }
  

  namespace jovic.dragan.pj2.personel {
    class jovic.dragan.pj2.personel.Pilot {
        + Pilot()
    }
  }
  

  jovic.dragan.pj2.personel.Passenger .up.|> java.io.Serializable
  jovic.dragan.pj2.personel.Passenger -up-|> jovic.dragan.pj2.personel.Person
  jovic.dragan.pj2.personel.Passenger o-- jovic.dragan.pj2.personel.belongings.Passport : passport
  jovic.dragan.pj2.personel.Person .up.|> java.io.Serializable
  jovic.dragan.pj2.personel.Pilot .up.|> java.io.Serializable
  jovic.dragan.pj2.personel.Pilot -up-|> jovic.dragan.pj2.personel.Person
  jovic.dragan.pj2.personel.Pilot o-- jovic.dragan.pj2.personel.belongings.FlyingLicence : licence


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
